--- a/index.html
+++ b/index.html
@@ -701,7 +701,16 @@ x³ - 1 = (x - 1)(x² + x + 1)
         </section>
 
         <section>
-            <h2>8. The Hyperbola Picture (Minkowski Embedding)</h2>
+            <h2>8. From Cyclotomic Circles to Minkowski Hyperbolas</h2>
+            
+            <div class="note">
+                <strong>Two geometric perspectives on quadratic units:</strong><br><br>
+                The period-3 behavior we just saw has a <strong>cyclotomic</strong> (circular) interpretation: roots of <code>x² + x + 1</code> lie on the unit circle <code>|z| = 1</code> in ℂ as primitive cube roots of unity.<br><br>
+                But the metallic means themselves live in a <strong>Minkowskian</strong> (hyperbolic) geometry: the condition <code>N(δₖ) = δₖ · δ'ₖ = -1</code> means conjugate pairs lie on the hyperbola <code>xy = 1</code>.<br><br>
+                These are the two faces of quadratic algebra: Euclidean-Pythagorean (<code>x² + y² = r²</code>) versus Minkowskian-hyperbolic (<code>xy = c</code>).
+            </div>
+
+            <h3>The Hyperbola Picture</h3>
 
             <p>The identity <code>δₖ⁻ⁿ = √(M+1) − √M</code> can be seen geometrically in a plane: set <code>x = δₖⁿ</code> and <code>y = δₖ⁻ⁿ</code>. Then <code>xy = 1</code>, so the point <code>(x,y)</code> lies on the hyperbola <code>xy = 1</code>.</p>
 
